--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,4 +3,8 @@
 	border-radius: 10px;
 	padding: 2rem;
 	margin: 1rem 3rem 0 3rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
