dummy place holder for cards

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,9 @@ a {
 	justify-content: center;
 	align-items: space-between;
 }
+
+.page-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
