--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	color: white;
 }
 
 code {
@@ -65,4 +66,5 @@ a {
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg %3E%3Ccircle fill='%23000000' cx='50' cy='0' r='50'/%3E%3Cg fill='%23050505' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%230a0a0a' cx='50' cy='100' r='50'/%3E%3Cg fill='%230e0e0e' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%23111111' cx='50' cy='200' r='50'/%3E%3Cg fill='%23151515' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%23171717' cx='50' cy='300' r='50'/%3E%3Cg fill='%231a1a1a' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%231c1c1c' cx='50' cy='400' r='50'/%3E%3Cg fill='%231f1f1f' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%23222222' cx='50' cy='500' r='50'/%3E%3Cg fill='%23242424' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%23272727' cx='50' cy='600' r='50'/%3E%3Cg fill='%232a2a2a' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%232d2d2d' cx='50' cy='700' r='50'/%3E%3Cg fill='%23303030' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%23323232' cx='50' cy='800' r='50'/%3E%3Cg fill='%23353535' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%23383838' cx='50' cy='900' r='50'/%3E%3Cg fill='%233b3b3b' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%233E3E3E' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
 	background-attachment: fixed;
 	background-size: contain;
+	height: 100%;
 }
