--- a/src/pages/UploadPage/UploadPage.css
+++ b/src/pages/UploadPage/UploadPage.css
@@ -1,30 +1,30 @@
 .upload-form {
-    text-align: center;
-    margin: 24px 50px 12px;
+	text-align: center;
+	margin: 24px 50px 12px;
 }
 
-select, input[type=text], [type=submit] {
-    width: 50%;
-    padding: 16px 8px;
-    margin: 8px 40px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+select,
+input[type="text"],
+[type="submit"] {
+	width: 50%;
+	padding: 16px 8px;
+	margin: 8px 40px;
+	display: inline-block;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
 }
 
-input[type=submit] {
-    background-color: #8ebf42;
-    color: white;
-    padding: 14px 0;
-    margin: 10px 0;
-    border: none;
-    cursor: grabbing;
-    width: 50%;
+input[type="submit"] {
+	background-color: #8ebf42;
+	color: white;
+	padding: 14px 0;
+	margin: 10px 0;
+	border: none;
+	cursor: grabbing;
+	width: 50%;
 }
-
 
 h1 {
-    text-align:center;
-    font-size:18;
-    color: black;
+	text-align: center;
+	font-size: 18;
 }
