--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,12 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 }
+/* global styles */
 
+a {
+	text-decoration: none;
+	color: white;
+}
 /* utility classes */
 
 .flex-row-centered {
