--- a/src/pages/UploadPage/UploadPage.css
+++ b/src/pages/UploadPage/UploadPage.css
@@ -3,7 +3,7 @@
     margin: 24px 50px 12px;
 }
 
-input[type=text], [type=submit] {
+select, input[type=text], [type=submit] {
     width: 50%;
     padding: 16px 8px;
     margin: 8px 40px;
