--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,8 @@
 .card-container {
 	max-width: 300px;
-	border-radius: 10px;
-	padding: 2rem;
+	border-bottom-left-radius: 3rem;
+	border-top-right-radius: 3rem;
+	/* padding: 2rem; */
 	margin: 1rem 3rem 0 3rem;
 	display: flex;
 	flex-direction: column;
@@ -12,3 +13,12 @@
 .like-button {
 	cursor: pointer;
 }
+
+.image { 
+	border-top-right-radius: 3rem;
+}
+
+.like-button {
+	margin-bottom: .75rem;
+}
+
