--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ a {
 .glass {
 	background: rgba(255, 255, 255, 0.25);
 
-	border-radius: 10px;
+	/* border-radius: 10px; */
 	border: 1px solid rgba(255, 255, 255, 0.18);
 }
 /* utility classes */
