--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -1,7 +1,7 @@
 .card-list-container {
     min-width: 100%;
-    height: 100%;
+    height: 100% !important;
     margin:5rem;
     padding:0;
-    display:flex;
+    display:inline-block;
 }
